--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kanishk protfolio</title>
+    <title>Kanishk Portfolio</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Welcome to Kanishk's portfolio - Showcasing creative projects and professional expertise in web development" />
+    <meta name="keywords" content="portfolio, web developer, Kanishk, projects" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-url.com" />
+    <meta property="og:title" content="Kanishk Portfolio - Web Developer" />
+    <meta property="og:description" content="Welcome to Kanishk's portfolio - Showcasing creative projects and professional expertise in web development" />
+    <meta property="og:image" content="/image.png" />
+    <meta property="og:site_name" content="Kanishk Portfolio" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://your-portfolio-url.com" />
+    <meta name="twitter:title" content="Kanishk Portfolio - Web Developer" />
+    <meta name="twitter:description" content="Welcome to Kanishk's portfolio - Showcasing creative projects and professional expertise in web development" />
+    <meta name="twitter:image" content="/image.png" />
+
+    <!-- LinkedIn -->
+    <meta property="linkedin:card" content="summary_large_image" />
+    <meta property="linkedin:title" content="Kanishk Portfolio - Web Developer" />
+    <meta property="linkedin:description" content="Welcome to Kanishk's portfolio - Showcasing creative projects and professional expertise in web development" />
+    <meta property="linkedin:image" content="/image.png" />
+
+    <!-- WhatsApp -->
+    <meta property="og:whatsapp:title" content="Kanishk Portfolio - Web Developer" />
+    <meta property="og:whatsapp:description" content="Welcome to Kanishk's portfolio - Showcasing creative projects and professional expertise in web development" />
+    <meta property="og:whatsapp:image" content="/image.png" />
+
     <script type="importmap">
       {
         "imports": {
